Fix cards to properly align

--- a/client/app/instructor/courses/sections/sectionview.less
+++ b/client/app/instructor/courses/sections/sectionview.less
@@ -67,12 +67,6 @@
     .additionalNotes {
       margin: 10px 0px;
     }
-
-    .card-container{
-      .event-card {
-        width: 100%;
-      }
-    }
     .align-middle{
       vertical-align: middle;
     }
